integration_tests/codegen_fail/fail/union/trait_method_conflicts_with_external_resolver_fn.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: GraphQL union trait method `a` conflicts with the external resolver function `some_fn` declared on the trait to resolve the variant type `Human`
 --> $DIR/trait_method_conflicts_with_external_resolver_fn.rs:5:5
  |
5 |     fn a(&self) -> Option<&Human>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Unions
  = note: use `#[graphql(ignore)]` attribute to ignore this trait method for union variants resolution
